alterando target dos links

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </h2>
         <div class="container">
             <div class="projects__item">
-                <a href="https://the-batman-one.vercel.app/">
+                <a target="_blank" href="https://the-batman-one.vercel.app/">
                     <img class="projects__img" src="./dist/images/the_batman_lp.png" alt="preview site the batman">
                 </a>
                 <h3 class="projects__item__title">
@@ -56,7 +56,7 @@
                 </p>
             </div>
             <div class="projects__item">
-                <a href="https://clone-disneyplus-nine.vercel.app/">
+                <a target="_blank" href="https://clone-disneyplus-nine.vercel.app/">
                     <img class="projects__img" src="./dist/images/disneyPlus_clone.png" alt="preview site Disney+">
                 </a>
                 <h3 class="projects__item__title">
@@ -67,7 +67,7 @@
                 </p>
             </div>
             <div class="projects__item">
-                <a href="https://my-birthday-neon.vercel.app/">
+                <a target="_blank" href="https://my-birthday-neon.vercel.app/">
                     <img class="projects__img" src="./dist/images/my_bday_site.png" alt="preview site meu aniversário">
                 </a>
                 <h3 class="projects__item__title">
@@ -78,7 +78,7 @@
                 </p>
             </div>
             <div class="projects__item">
-                <a href="#">
+                <a target="_blank" href="#">
                     <img class="projects__img" src="./dist/images/em_breve.jpg" alt="em breve">
                 </a>
                 <h3 class="projects__item__title">
