--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <header class="header">
         <img src="https://via.placeholder.com/70x70" alt="logo Tcodes">
-        <ul class="header__links">
+        <button id="btn-menu">Menu</button>
+        <ul id="menu" class="header__links">
             <li class="header__links__item">
                 <a href="#about">About</a>
             </li>
@@ -117,5 +118,6 @@
         </ul>
     </footer>
 
+    <script src="./dist/js/main.js"></script>
 </body>
 </html>
