--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="about__text">
                 <h2 class="about__title">
-                    Um pouco sobre mim
+                    Sobre mim
                 </h2>
                 <p class="about__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae at quo ipsa mollitia perspiciatis consectetur similique, iste obcaecati cumque eligendi deleniti, nostrum vel itaque possimus cupiditate ratione recusandae. Dolore, accusantium!
